--- a/louvain-method/Makefile
+++ b/louvain-method/Makefile
@@ -3,10 +3,10 @@
 CC      = g++
 CFLAGS  = -ansi -O5 -Wall
 LDFLAGS = -ansi -lm -Wall
-EXEC    = convert community_modularity community_coverage hierarchy indexzero
+EXEC    = convert community-modularity community-coverage hierarchy indexzero
 OBJ1    = graph.o
-OBJ2    = graph_binary.o community_modularity.o
-OBJ3    = graph_binary.o community_coverage.o
+OBJ2    = graph_binary.o community-modularity.o
+OBJ3    = graph_binary.o community-coverage.o
 
 
 all: $(EXEC)
@@ -14,10 +14,10 @@ all: $(EXEC)
 convert : $(OBJ1) main_convert.o
 	$(CC) -o $@ $^ $(LDFLAGS)
 
-community_modularity : $(OBJ2) main_community_modularity.o
+community-modularity : $(OBJ2) main_community-modularity.o
 	$(CC) -o $@ $^ $(LDFLAGS)
 
-community_coverage : $(OBJ3) main_community_coverage.o
+community-coverage : $(OBJ3) main_community-coverage.o
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 hierarchy : main_hierarchy.o
